feat(core): implement SimpleThresholdClusterer and PlattCalibration
Implements a graph-based SimpleThresholdClusterer and an improved PlattCalibration.

The SimpleThresholdClusterer now uses a Disjoint Set Union (DSU) data structure to find connected components in the graph of items, which is more robust and aligns with the requirements.

The PlattCalibration now exposes score cutoffs for pAccept and pReject by implementing the inverse-sigmoid function.

Unit tests are added for both classes to verify their correctness.